feat: kubernetes persistence